--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -2441,6 +2441,13 @@ fieldset:disabled a.btn {
   border-color: #007bff;
 }
 
+.anchor{
+  display:block;
+  height:63px; /* this is the height of your header */
+  margin-top:-63px; /* this is again negative value of the height of your header */
+  visibility:hidden;
+}
+
 .btn-primary:not(:disabled):not(.disabled):active, .btn-primary:not(:disabled):not(.disabled).active,
 .show > .btn-primary.dropdown-toggle {
   color: #fff;
