--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,6 @@
-p{
-    font-style: initial;
-    font-size: 30px;
-}
+.anchor{
+    display:block;
+    height:63px; /* this is the height of your header */
+    margin-top:-63px; /* this is again negative value of the height of your header */
+    visibility:hidden;
+}  
